[gd_scene load_steps=4 format=3 uid="uid://b3i0ssb01yyas"]

[ext_resource type="PackedScene" uid="uid://b1eg4lgqwdml7" path="res://scenes/dungeons/dungeon_template.tscn" id="1_6m6da"]
[ext_resource type="Script" uid="uid://bs2ir1pjybdr6" path="res://scenes/dungeons/main_sub_gate_3.gd" id="2_6onf4"]
[ext_resource type="PackedScene" uid="uid://ca5ijfjdvqu1o" path="res://scenes/warp_zone.tscn" id="3_swulm"]

[node name="dungeon" instance=ExtResource("1_6m6da")]
script = ExtResource("2_6onf4")

[node name="GridMap" parent="." index="0"]
data = {
"cells": PackedInt32Array(-131072, 65533, 786432, -131071, 65533, 786432, -131070, 65533, 786432, -131069, 65533, 786432, -131068, 65533, 786432, -131067, 65533, 786432, -131067, 65532, 786432, -131067, 65531, 786432, -131067, 65530, 786432, -131067, 65529, 786432, -131067, 65528, 786432, -131067, 65527, 786432, -131067, 65526, 786432, -131068, 65526, 786432, -131069, 65526, 786432, -131070, 65526, 786432, -131070, 65527, 786432, -131070, 65528, 786432, -131070, 65529, 786432, -131070, 65530, 786432, -131071, 65530, 786432, -131072, 65530, 786432, -65537, 65530, 786432, -65538, 65530, 786432, -65539, 65530, 786432, -65539, 65529, 786432, -65539, 65528, 786432, -65539, 65527, 786432, -65539, 65526, 786432, -65538, 65526, 786432, -65537, 65526, 786432, -65540, 65526, 786432, -65541, 65526, 786432, -65542, 65526, 786432, -65543, 65526, 786432, -65542, 65522, 786432, -65541, 65522, 786432, -65540, 65522, 786432, -65539, 65522, 786432, -65538, 65522, 786432, -65537, 65522, 655369, -131072, 65522, 655369, -131071, 65522, 655369, -131070, 65522, 655369, -131069, 65522, 655369, -65537, 65518, 9, -65537, 65517, 655369, -65537, 65507, 9, -131072, 65507, 9, -131071, 65507, 9, -131070, 65507, 9, -131069, 65507, 18, -131069, 65508, 1441801, -131069, 65509, 1441801, -131069, 65515, 655369, -131069, 65516, 9, -131072, 65518, 1048586, -131072, 65517, 655370, -131071, 65512, 655370, -131071, 65513, 1048586, -131070, 65516, 10, -131070, 65515, 1441802, -131072, 65512, 1441802, -131072, 65513, 10, -131069, 65510, 10, -131073, 65516, 786432, -196608, 65516, 786432, -196608, 65515, 786432, -196608, 65514, 786432, -131073, 65514, 786432, -131073, 65515, 786432, -196607, 65516, 786432, -196607, 65515, 786432, -196607, 65514, 786432, -131073, 65519, 786432, -196608, 65519, 786432, -196607, 65519, 786432, -196606, 65519, 786432, -196605, 65519, 786432, -196605, 65518, 786432, -196605, 65517, 786432, -196606, 65517, 786432, -196607, 65517, 786432, -196607, 65518, 786432, -196606, 65518, 786432, -131073, 65513, 786432, -131073, 65512, 786432, -131073, 65511, 786432, -131073, 65510, 786432, -131073, 65509, 786432, -131073, 65508, 786432, -196608, 65508, 786432, -196607, 65508, 786432, -196606, 65508, 786432, -196606, 65509, 786432, -196607, 65509, 786432, -196608, 65509, 786432, -196608, 65510, 786432, -196608, 65511, 786432, -196607, 65511, 786432, -196607, 65510, 786432, -196606, 65510, 786432, -196606, 65511, 786432, -196605, 65511, 786432, -196605, 65512, 786432, -196605, 65513, 786432, -196605, 65514, 786432, -196606, 65514, 786432, -196606, 65513, 786432, -196606, 65512, 786432, -131074, 65519, 786432, -131075, 65519, 786432, -131076, 65519, 786432, -131077, 65519, 786432, -131078, 65519, 786432, -131079, 65519, 786432, -196607, 65520, 786432, -196607, 65521, 786432, -196606, 65521, 786432, -196606, 65520, 786432, -196605, 65520, 786432, -196605, 65521, 786432, -131073, 65520, 786432, -131073, 65521, 786432, -196608, 65520, 786432, -196608, 65521, 786432, -65538, 65520, 1048577, -65539, 65520, 655365, -65540, 65520, 655365, -65541, 65520, 655365, -65542, 65520, 655365, -65543, 65520, 655365, -65543, 65518, 5, -65542, 65518, 5, -65541, 65518, 5, -65540, 65518, 5, -65539, 65518, 5, -65538, 65518, 5, -65538, 65521, 1048581, -131068, 65521, 1441797, -131068, 65520, 1441797, -131068, 65519, 1441797, -131068, 65518, 1441797, -131068, 65517, 1441797, -131068, 65514, 1441797, -131068, 65513, 1441797, -131068, 65512, 1441797, -131068, 65511, 1441797, -65538, 65508, 1048581, -65538, 65509, 1048581, -65538, 65510, 1048581, -65538, 65511, 1048581, -65538, 65512, 1048581, -65538, 65513, 1048581, -65538, 65514, 1048581, -65538, 65515, 1048581, -65538, 65516, 1048581, -65534, 65506, 17, -65533, 65506, 17, -1, 65506, 17, -65536, 65506, 17, -2, 65507, 1048593, -65532, 65507, 1441809, -65532, 65508, 1441809, -65532, 65509, 1441809, -65532, 65510, 1441809, -65532, 65515, 1441809, -65532, 65516, 1441809, -2, 65518, 1048593, -2, 65517, 1048593, -65532, 65522, 1441809, -65533, 65523, 655377, -65534, 65523, 655377, -65535, 65523, 655377, -65536, 65523, 655377, -1, 65523, 655377, -2, 65523, 655365, -3, 65523, 655365, -4, 65523, 655365, -5, 65521, 5, -4, 65521, 5, -3, 65521, 5, -2, 65521, 5, -6, 65521, 5, -7, 65522, 1048581, -8, 65526, 1048581, -7, 65527, 655365, -6, 65527, 655365, -5, 65527, 655365, -1, 65527, 655365, -65536, 65526, 1441797, -1, 65525, 5, -2, 65525, 5, -3, 65525, 5, -4, 65525, 5, -1, 65529, 16, -65536, 65529, 16, -4, 65528, 1048581, -4, 65529, 1048581, -4, 65530, 1048581, -3, 65531, 655365, -2, 65531, 655365, -1, 65531, 655365, -65536, 65531, 655365, -65535, 65531, 655365, -65534, 65531, 655365, -65533, 65530, 1441797, -65533, 65529, 1441797, -65533, 65528, 1441797, -65532, 65528, 1048581, -65532, 65529, 1048581, -65532, 65530, 1048581, -65532, 65531, 1048581, -65533, 65532, 5, -65534, 65532, 5, -65535, 65532, 5, -65536, 65532, 5, -1, 65533, 1048581, -65535, 65534, 655365, -65534, 65534, 655365, -65533, 65534, 655365, -65532, 65534, 655365, -65531, 65534, 655365, -65530, 65533, 1441797, -65530, 65532, 1441797, -65530, 65531, 1441797, -65530, 65530, 1441797, -65530, 65529, 1441797, -65530, 65528, 1441797, -65530, 65527, 1441797, -65530, 65526, 1441797, -65531, 65525, 5, -65532, 65525, 5, -65533, 65525, 5, -65534, 65525, 5, -65535, 65526, 1048581, -65535, 65527, 1048581, -65535, 65528, 1048581, -65535, 65529, 1, -2, 65528, 1441797, -2, 65529, 1441793, -2, 65527, 655361, -4, 65527, 1048577, -65533, 65527, 655361, -65532, 65527, 1048577, -65532, 65532, 1, -65544, 65519, 3, -65545, 65519, 4, -65546, 65519, 4, -65536, 65534, 1048579, -65536, 65535, 1048580, -65535, 65506, 1441795, -65535, 65505, 1441796, -65535, 65504, 1441796, -6, 65523, 1048579, -6, 65525, 1441795, -6, 65524, 1441796, -5, 65525, 16, -7, 65525, 16)
}

[node name="Warp Zone" parent="." index="4" instance=ExtResource("3_swulm")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0.5, -0.5, 0.5)

[node name="Warp Zone2" parent="." index="5" instance=ExtResource("3_swulm")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 1.5, -0.5, -32.5)

[node name="Warp Zone3" parent="." index="6" instance=ExtResource("3_swulm")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -10.5, -1.5, -16.5)

[connection signal="body_entered" from="Warp Zone" to="." method="_on_warp_zone_body_entered"]
[connection signal="body_entered" from="Warp Zone2" to="." method="_on_warp_zone_2_body_entered"]
[connection signal="body_entered" from="Warp Zone3" to="." method="_on_warp_zone_3_body_entered"]
